# pre-commit-docconvert

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/pre_commit_docconvert/: __init__.py  __main__.py
